--- a/bibliotheques/ReadMe
+++ b/bibliotheques/ReadMe
@@ -1,1 +1,2 @@
-
+Ce répertoire contient des fichiers déjà paramétrés pour certaines bibliothèques nécessaires.
+Bibliothèque ESP32_Display_Panel: fichier
